# imGUI-unicorn-test

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  PROJECT_STRUCTURE.md  app_data.db  build.sh  imgui.ini
lib/onnxruntime/: .signature.p7s  Microsoft.ML.OnnxRuntime.nuspec  [Content_Types].xml
lib/onnxruntime/_rels/: .rels
lib/onnxruntime/buildTransitive/net8.0-ios15.4/: Microsoft.ML.OnnxRuntime.targets
lib/windows/: moildev.lib  moildev_cpu.lib  moildev_ocl.lib
moil/: moildev.hpp  moildev_common.hpp  moildev_cpu.hpp  moildev_cpu_c_api.h  moildev_ocl.hpp  moildev_ocl_c_api.h  moildev_plugin.hpp
src/: main.cpp
src/core/: database_manager.cpp  database_manager.h  system_monitor.cpp  system_monitor.h
src/ui/: camera_view.cpp  camera_view.h  database_view.cpp  database_view.h  multiview_camera.cpp  multiview_camera.h  sidebar_ui.cpp  sidebar_ui.h  widget_gallery_view.cpp  widget_gallery_view.h
src/utils/: graphics_utils.cpp  graphics_utils.h
